--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -209,8 +209,7 @@
                         <h5 class="card-title">Abby</h5>
                         <p class="card-text">R$ 419,90</p>
                         <p class="text_desconto card-text">16% de desconto</p>
-                        <a href="html/tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
-                        <a href="html/tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
+                        <a href="/html/tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
                     </div>
                 </div>
             </div>
@@ -222,8 +221,7 @@
                         <h5 class="card-title">Piccolo</h5>
                         <p class="card-text">R$ 429,90</p>
                         <p class="text_desconto card-text">14% de desconto</p>
-                        <a href="html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver miniatura</a>
-                        <a href="html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver miniatura</a>
+                        <a href="/html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver miniatura</a>
                     </div>
                 </div>
             </div>
@@ -235,8 +233,7 @@
                         <h5 class="card-title">Leia</h5>
                         <p class="card-text">R$ 429,90</p>
                         <p class="text_desconto card-text">14% de desconto</p>
-                        <a href="html/starWars/leia.html" class="btn btn-outline-success button">Ver miniatura</a>
-                        <a href="html/starWars/leia.html" class="btn btn-outline-success button">Ver miniatura</a>
+                        <a href="/html/starWars/leia.html" class="btn btn-outline-success button">Ver miniatura</a>
                     </div>
                 </div>
             </div>
@@ -263,7 +260,6 @@
                                     <p class="card-text">R$ 449,90</p>
                                     <p class="text_desconto card-text">13% de desconto</p>
                                     <a href="html/marvel/homemAranha.html" class="btn btn-outline-success button">Ver
-                                    <a href="html/marvel/homemAranha.html" class="btn btn-outline-success button">Ver
                                         miniatura</a>
                                 </div>
                             </div>
@@ -276,9 +272,7 @@
                                     <h5 class="card-title">Piccolo</h5>
                                     <p class="card-text">R$ 429,90</p>
                                     <p class="text_desconto card-text">14% de desconto</p>
-                                    <a href="html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver
-                                    <a href="html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver
-                                        miniatura</a>
+                                    <a href="html/dragonBall/piccolo.html" class="btn btn-outline-success button">Ver miniatura</a>
                                 </div>
                             </div>
                         </div>
@@ -290,9 +284,7 @@
                                     <h5 class="card-title">Leia</h5>
                                     <p class="card-text">R$ 429,90</p>
                                     <p class="text_desconto card-text">14% de desconto</p>
-                                    <a href="html/starWars/leia.html" class="btn btn-outline-success button">Ver
-                                    <a href="html/starWars/leia.html" class="btn btn-outline-success button">Ver
-                                        miniatura</a>
+                                    <a href="html/starWars/leia.html" class="btn btn-outline-success button">Ver miniatura</a>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +302,6 @@
                                     <p class="card-text">R$ 419,90</p>
                                     <p class="text_desconto card-text">16% de desconto</p>
                                     <a href="html/tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
-                                    <a href="html/tlou/abby.html" class="btn btn-outline-success button">Ver miniatura</a>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +314,6 @@
                                     <p class="card-text">R$ 489,90</p>
                                     <p class="text_desconto card-text">14% de desconto</p>
                                     <a href="html/dc/batman.html" class="btn btn-outline-success button">Ver miniatura</a>
-                                    <a href="html/dc/batman.html" class="btn btn-outline-success button">Ver miniatura</a>
                                 </div>
                             </div>
                         </div>
@@ -335,9 +325,7 @@
                                     <h5 class="card-title">Medusa</h5>
                                     <p class="card-text">R$ 459,90</p>
                                     <p class="text_desconto card-text">15% de desconto</p>
-                                    <a href="html/seresMito/medusa.html" class="btn btn-outline-success button">Ver
-                                    <a href="html/seresMito/medusa.html" class="btn btn-outline-success button">Ver
-                                        miniatura</a>
+                                    <a href="html/seresMito/medusa.html" class="btn btn-outline-success button">Ver miniatura</a>
                                 </div>
                             </div>
                         </div>
