--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -91,7 +91,7 @@
                         style="margin-left: auto; margin-right: auto; background-color: #1cbe7e; color: black; border: solid black 2px; width: 40%; border-radius: 60px; font-size: 2.5vh;">Entrar</button>
                 </div>
                 <div style="margin-left: auto; margin-right: auto; margin-top: 1%; margin-bottom: 3%;">
-                    <p>Não tem uma conta? <a href="criarconta.html"
+                    <p>Não tem uma conta? <a href="/html/criarconta.html"
                             style="text-decoration: none; color: #1cbe7e;"><b>Crie uma</b></a></p>
                 </div><b>
             </div>
@@ -186,7 +186,7 @@
 
     <!--Produtos lançamentos no site-->
     <div class="container" style="margin-top: 50px;">
-        <h2 class="text-center" style="color: aliceblue;">Lançamentos</h2>
+        <h2 class="text-center" style="color: rgb(0, 97, 16);">Lançamentos</h2>
         <hr class="hr_lancamento mx-auto" style="border-top: 2px solid aliceblue; width: 150px;">
 
         <div class="row text-center mt-4">
