--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -186,8 +186,8 @@
 
     <!--Produtos lançamentos no site-->
     <div class="container" style="margin-top: 50px;">
-        <h2 class="text-center" style="color: rgb(0, 97, 16);">Lançamentos</h2>
-        <hr class="hr_lancamento mx-auto" style="border-top: 2px solid aliceblue; width: 150px;">
+        <h1 class="text-center" style="color: rgb(0, 97, 16); font-weight: 700;">Lançamentos</h1>
+        <hr class="hr_lancamento mx-auto" style="border-top: 2px solid black; width: 150px;">
 
         <div class="row text-center mt-4">
             <div class="col-6 col-sm-6 col-md-6 col-lg-3 mb-4">
@@ -243,8 +243,8 @@
 
     <!--Produtos que estão em promoção no site em um slider-->
     <div class="container my-5">
-        <h2 class="text-center text-light mb-3">Promoções</h2>
-        <hr class="mx-auto mb-4" style="width: 150px; border-top: 2px solid aliceblue;">
+        <h1 class="text-center text-light mb-3" style="color: rgb(0, 97, 16)!important; font-weight: 700;">Promoções</h1>
+        <hr class="mx-auto mb-4" style="width: 150px; border-top: 2px solid black;">
 
         <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -351,21 +351,21 @@
     <!--Marcas presentes no site-->
     <div class="container" style="margin-top: 50px;">
         <div class="row text-center">
-            <h2 style="color: aliceblue;">Marcas</h2>
+            <h1 style="color: rgb(0, 97, 16); font-weight: 700;">Marcas</h1>
             <div style="display: flex; justify-content: center;">
-                <hr style="color: aliceblue; margin-top: 1dvh; margin-bottom: 5dvh; width: 150px; border-width: 2px;">
+                <hr style="color: black; margin-top: 1dvh; margin-bottom: 5dvh; width: 150px; border-width: 2px;">
             </div>
             <div class="col">
                 <a href="produtos.html#marvel">
-                    <div class="div_marcas" style="background-color: red;">
+                    <div class="div_marcas" style="background-color: red; border: none!important">
                         <img style="width: 93%; margin-top: 26%;" src="../images/logo_marvel.png">
                     </div>
                 </a>
             </div>
             <div class="col">
                 <a href="produtos.html#dc">
-                    <div class="div_marcas" style="background-color: rgb(0, 153, 255);">
-                        <img style="width: 100%; filter: brightness(100);" src="../images/logo_dc.png">
+                    <div class="div_marcas" style="background-color: white;">
+                        <img style="width: 100%;" src="../images/logo_dc.png">
                     </div>
                 </a>
             </div>
@@ -465,6 +465,8 @@
         </div>
     </footer>
 
+
+    <a href="perfil.html">perfilllllllllll</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
