--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -93,7 +93,7 @@
                 <div style="margin-left: auto; margin-right: auto; margin-top: 1%; margin-bottom: 3%;">
                     <p>Não tem uma conta? <a href="/html/criarconta.html"
                             style="text-decoration: none; color: #1cbe7e;"><b>Crie uma</b></a></p>
-                </div><b>
+                </div>
             </div>
         </div>
     </div>
@@ -496,6 +496,7 @@
                     style="margin-left: auto; margin-right: auto; border-radius: 60px; width: 40%; font-size: 2.5vh;">
                     Sair
                     </button>
+                    <p><a href="perfil.html">Ver Perfil</a></p>
                 `;
 
                 // Evento de logout
