--- a/miniverse/html/starWars/leia.html
+++ b/miniverse/html/starWars/leia.html
@@ -234,7 +234,7 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
+    <footer class="bd-footer py-4 py-md-5">
         <div class="container py-4 py-md-5 px-4 px-md-3">
             <div class="row">
                 <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
